help buttons (compare,allusers,shootoutRanking, shootoutÜbersicht)

--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -70,5 +70,7 @@
 
     <!--Help button-->
     <button class="helpBtn2">Help
-        <span class="helpText">Please insert help text.</span>
+        <span class="helpText">To upload new pictures please click on the "+" and select local files you want to
+        upload. To sign out please click on the button "Menu" on the upper right corner and on "Sign out" from the drop-
+        down.</span>
     </button>
