--- a/frontend/static/html/shootoutRanking.html
+++ b/frontend/static/html/shootoutRanking.html
@@ -5,13 +5,15 @@
     <link rel="icon" href="Herzbeben_Logo.png">
 	<link rel="stylesheet" href="compare_profile.css" type="text/css">
     <link rel="stylesheet" href="shootout.css" type="text/css">
-    <!-- Latest compiled and minified CSS -->
+    <!-- Latest compiled and minified CSS-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script type=text/javascript src = "navbarFunction.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset= utf-8" />
+
+
 </head>
 <body>
   <header class="navbar navbar-inverse navbar-fixed-top navbar-custom">
@@ -27,6 +29,15 @@
           </button>
           <a class="navbar-brand" href="#"> <img class="brandImage" src="Herzbeben_Logo.png" alt="Home" width="30px" height="30px"> </a>
         </div>
+
+     <!--creates Help button-->
+          <div id="helpBtn3">
+              <button class="helpBtn3">Help
+                  <span class="helpText"> On this page you see the picture ranking of the selected shootout. To
+                      get back to the different shootouts click on "Shootout Rankings" at the top menu.
+      </span>
+              </button>
+          </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -56,6 +67,7 @@
       </div><!-- /.container-fluid -->
     </nav>
     </header>
+
     <div id="ranking">
         <br>
         <h1>Top ranked pictures</h1>
@@ -150,5 +162,8 @@
             <img src="sean-o-406693-unsplash.jpg" alt="no pictures ranked yet" style="width:100%" height="250px" width="280px">
         </div>
     </div>
+
+
+
 </body>
 </html>
