--- a/frontend/static/html/shootoutÜbersicht.html
+++ b/frontend/static/html/shootoutÜbersicht.html
@@ -81,5 +81,13 @@
         </tr>
         </table>
     </div>
+  <!--creates Help button-->
+  <div id = "helpBtn4">
+      <button class="helpBtn4">Help
+          <span class="helpText">To see the picture ranking of a selected shootout click on "Picture Ranking".
+       </span>
+      </button>
+  </div>
+
 </body>
 </html>
