--- a/frontend/static/html/allusers.html
+++ b/frontend/static/html/allusers.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>AllUsers</title>
     <link rel="icon" href="./images/Herzbeben_Logo.png">
-    <link rel="stylesheet" href="compare_profile.css" type="text/css">
+    <link rel="stylesheet" href="allusers.css" type="text/css">
     <script type=text/javascript src = "navbarFunction.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -111,9 +111,6 @@
                             "<td id='td6 " + i + "'>" + userlist[i].password + "</td>" +
                             "</tr>";
                     }
-
-
-
                     }
                 }
 
