help buttons text (compare,allusers,shootoutRanking, shootoutÜbersicht)

--- a/frontend/static/html/allusers.html
+++ b/frontend/static/html/allusers.html
@@ -76,7 +76,8 @@
     </table>
      <!--help button-->
 <button class="helpBtn">Help
-    <span class="helpText">Here's the help text.</span>
+    <span class="helpText">On this page you can see all the users that are registered. To go back to the Home-Page
+    please click on the upper left corner.</span>
 </button>
 
 <script>
