--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -71,6 +71,6 @@
     <!--Help button-->
     <button class="helpBtn2">Help
         <span class="helpText">To upload new pictures please click on the "+" and select local files you want to
-        upload. To sign out please click on the button "Menu" on the upper right corner and on "Sign out" from the drop-
-        down.</span>
+        upload. <br> To sign out please click on the button "Sign out" on the drop-
+        down button "Menu".</span>
     </button>
