changes in navbar

--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -18,7 +18,7 @@
 <body>
 
 
-<header class="navbar navbar-inverse fnavbar-fixed-top navbar-custom">
+<header class="navbar navbar-inverse navbar-fixed-top navbar-custom">
     <nav role="navigation" >
         <div class="container-fluid" >
             <!-- Brand and toggle get grouped for better mobile display -->
