--- a/frontend/static/html/index.html
+++ b/frontend/static/html/index.html
@@ -194,7 +194,12 @@ checkNotEmpty();
            xmlhttp.setRequestHeader("Content-Type", "application/json");
            //sent the new HttpRequest
            xmlhttp.send(JSON.stringify({"email": email,"password": password,"name": lastname,"firstName": firstname, "username" : username }));
+// noch zu bearbeiten!! -----------------------
+           document.cookie = "id=";
+// --------------------------------------------
            window.location.replace("http://localhost:8080/compare.html");
+
+
        }
        else{
           alert('signin failed');
