--- a/frontend/static/html/shootoutRanking.html
+++ b/frontend/static/html/shootoutRanking.html
@@ -27,7 +27,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"> <img class="brandImage" src="Herzbeben_Logo.png" alt="Home" width="30px" height="30px"> </a>
+          <a class="navbar-brand" href="#"> <img class="brandImage" src="./images/icon.png" alt="Home" width="30px" height="30px"> </a>
         </div>
 
      <!--creates Help button-->
