--- a/frontend/static/html/shootoutÜbersicht.html
+++ b/frontend/static/html/shootoutÜbersicht.html
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"> <img class="brandImage" src="Herzbeben_Logo.png" alt="Home" width="30px" height="30px"> </a>
+          <a class="navbar-brand" href="#"> <img class="brandImage" src="./images/icon.png" alt="Home" width="30px" height="30px"> </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
