changed icon again, created list of all photos in db, created alerts for user registration

--- a/frontend/static/html/allusers.html
+++ b/frontend/static/html/allusers.html
@@ -70,11 +70,11 @@
             <th>Firstname</th>
             <th>E-Mail</th>
             <th>Username</th>
-            <th>Password</th>
-        </tr>
+            <!--   <th>Password</th>-->
+          </tr>
 
-    </table>
-     <!--help button-->
+      </table>
+       <!--help button-->
 <button class="helpBtn">Help
     <span class="helpText">On this page you can see all the users that are registered. To go back to the Home-Page
     please click on the upper left corner.</span>
@@ -109,7 +109,7 @@
                             "<td id='td3 " + i + "'>" + userlist[i].firstName + "</td>" +
                             "<td id='td4 " + i + " '>" + userlist[i].email + "</td>" +
                             "<td id='td5 " + i + "'>" + userlist[i].username + "</td>" +
-                            "<td id='td6 " + i + "'>" + userlist[i].password + "</td>" +
+                            //"<td id='td6 " + i + "'>" + userlist[i].password + "</td>" +
                             "</tr>";
                     }
                     }
