--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -66,8 +66,32 @@
         <div id="upload-picture" align="center">
            <span title="Upload picture"> <button id="uploadButton">+</button>  </span>
         </div>
-        <p id="profile-username">Username</p>
+    <div id="usernamefield">
 
+    </div>
+<script>
+    window.onload = function () {
+        var userid = document.cookie;
+        userid = "34";
+
+        var xmlhttplog = new XMLHttpRequest(); // new HttpRequest instance
+
+        xmlhttplog.open("GET", "http://localhost:8080/meetme/api/person/" + userid, true);
+        xmlhttplog.setRequestHeader("Content-Type", "application/json");
+        //sent the new HttpRequest
+        xmlhttplog.send(null);
+        xmlhttplog.onreadystatechange = function () {
+            if (xmlhttplog.readyState == XMLHttpRequest.DONE) {
+                var json = xmlhttplog.responseText;
+                var userdata = JSON.parse(json);
+                var namelabel = document.getElementById("usernamefield");
+                namelabel.innerHTML +=
+            "<p id='profile-username'>" + userdata.username +"</p>";
+            }
+        }
+    }
+
+</script>
     <!--Help button-->
     <button class="helpBtn2">Help
         <span class="helpText">To upload new pictures please click on the "+" and select local files you want to
