--- a/frontend/static/html/shootoutRanking.html
+++ b/frontend/static/html/shootoutRanking.html
@@ -96,7 +96,7 @@
             <img src="sean-o-406693-unsplash.jpg" alt="no pictures ranked yet" style="width:100%" height="250px" width="280px">
         </div>
     </div>
-    <div id="Bildüberschrift">
+    <!-- <div id="Bildüberschrift">
         <div class="container">
         <table>
         <tr>
@@ -161,7 +161,7 @@
         <div id="Third-best">
             <img src="sean-o-406693-unsplash.jpg" alt="no pictures ranked yet" style="width:100%" height="250px" width="280px">
         </div>
-    </div>
+    </div> -->
 
 
 
