login/signin completly finished, read cookie function implemented

--- a/frontend/static/html/index.html
+++ b/frontend/static/html/index.html
@@ -75,70 +75,62 @@
         window.location.replace("http://localhost:8080/compare.html");
     }
 };*/
+function checkNotEmpty(usernamel,passwordl) {
+    if (usernamel === "" || usernamel === null) {
+        alert('Please type in a Username!');
+    }
+    else if (passwordl === "" || passwordl === null) {
+        alert('Please type in a Password!');
 
+    }
+    else if (document.cookie) {
+        window.location.replace("http://localhost:8080/compare.html");
+    }
+    else {
+        alert('in der signin else');
+        alert(usernamel + ' ' + passwordl);
+        // Check if ConfirmationPW = PW
+
+        //create hashed PW
+        //var valpw = createvalidpw(password);
+        //alert(valpw); //debug purpose only
+
+        var xmlhttplog = new XMLHttpRequest(); // new HttpRequest instance
+
+        xmlhttplog.open("GET", "http://localhost:8080/meetme/api/person/username/" + usernamel, true);
+        xmlhttplog.setRequestHeader("Content-Type", "application/json");
+        //sent the new HttpRequest
+        xmlhttplog.send(null);
+        alert('request für user gesendet');
+        xmlhttplog.onreadystatechange = function () {
+            if (xmlhttplog.readyState == XMLHttpRequest.DONE) {
+                var json = xmlhttplog.responseText;
+                var userdata = JSON.parse(json);
+                alert (userdata);
+                var dbpassword = (userdata.password);
+                var dbusername = (userdata.username);
+                alert('db passwort = ' + dbpassword + '  db username = ' + dbusername);
+                if (dbpassword === passwordl && dbusername === usernamel) {
+                    document.cookie = "id=" + userdata.id;
+                    window.location.replace("http://localhost:8080/compare.html");
+                }
+            }
+        }
+    }
+}
     function signinUser(){
-        alert('signin shit started'); //debug purpose only
+        alert('signin started'); //debug purpose only
 
         //initalizing variables with textfields from html signin form
 
         var usernamel = document.getElementById("usernamelogin").value;
         var passwordl = document.getElementById("passwordlogin").value;
-alert('username = ' + usernamel);
+        alert('username = ' + usernamel + 'passwort = ' + passwordl);
          //creates alert if no username or password is typed in
 
-         function checkNotEmpty() {
-                 if (usernamel === "" || usernamel === null) {
-                     alert('Please type in a Username!');
-                 }
-                 else if (passwordl === "" || passwordl === null) {
-                     alert('Please type in a Password!');
+        checkNotEmpty(usernamel,passwordl);
+    }
 
-                 }
-                else if (document.cookie) {
-                     window.location.replace("http://localhost:8080/compare.html");
-               }
-                 else {
-
-                     // Check if ConfirmationPW = PW
-
-                     //create hashed PW
-                     //var valpw = createvalidpw(password);
-                     //alert(valpw); //debug purpose only
-                     var id = "34";
-                     var xmlhttplog = new XMLHttpRequest(); // new HttpRequest instance
-
-                     xmlhttplog.open("GET", "http://localhost:8080/meetme/api/person/" + id, true);
-                     xmlhttplog.setRequestHeader("Content-Type", "application/json");
-                     //sent the new HttpRequest
-                     xmlhttplog.send(null);
-                     xmlhttplog.onreadystatechange = function () {
-                         if (xmlhttplog.readyState == XMLHttpRequest.DONE) {
-                             var json = xmlhttplog.responseText;
-                             var userdata = JSON.parse(json);
-                             var dbpassword = (userdata.password);
-                             var dbusername = (userdata.username);
-
-                             if (dbpassword === passwordl && dbusername === usernamel) {
-
-                                 document.cookie = "id=" + userdata.id;
-                                window.location.replace("http://localhost:8080/compare.html");
-
-                             }
-                             else {
-                                 alert('login failed');
-                             }
-                         }
-                     }
-                 }
-        }
-
-
-checkNotEmpty();
-
-
-
-
-        }
 </script>
 
 
@@ -182,71 +174,91 @@ checkNotEmpty();
 
 
            // Check if ConfirmationPW = PW
-           if(checkPassword(confpw,password) === true){
+           if (checkPassword(confpw, password) === true) {
                //create hashed PW
                //var valpw = createvalidpw(password);
-
 
                var xmlhttp = new XMLHttpRequest(); // new HttpRequest instance
 
                xmlhttp.open("POST", "http://localhost:8080/meetme/api/person");
                xmlhttp.setRequestHeader("Content-Type", "application/json");
                //sent the new HttpRequest
-               xmlhttp.send(JSON.stringify({"email": email,"password": password,"name": lastname,"firstName": firstname, "username" : username }));
-// noch zu bearbeiten!! -----------------------
-               document.cookie = "id=test";
-// --------------------------------------------
-               window.location.replace("http://localhost:8080/compare.html");
+               xmlhttp.send(JSON.stringify({
+                   "email": email,
+                   "password": password,
+                   "name": lastname,
+                   "firstName": firstname,
+                   "username": username
+               }));
 
+                    }
+           else
+               {
+                   alert('signin failed');
+               }
+           }
+
+
+
+           function checkdataindb(email, username) {
+               var xhr = new XMLHttpRequest();
+               var json;
+               var anzahluser;
+
+               function createcookie (){
+                   var xmlhttpcookie = new XMLHttpRequest(); // new HttpRequest instance
+
+                   xmlhttpcookie.open("GET", "http://localhost:8080/meetme/api/person/username/" + username, true);
+                   xmlhttpcookie.setRequestHeader("Content-Type", "application/json");
+                   //sent the new HttpRequest
+                   xmlhttpcookie.send(null);
+                   xmlhttpcookie.onreadystatechange = function () {
+                       if (xmlhttpcookie.readyState == XMLHttpRequest.DONE) {
+                           var json = xmlhttpcookie.responseText;
+                           var userdata = JSON.parse(json);
+                           document.cookie = "id=" + userdata.id;
+                       }
+                   }
+
+               }
+               xhr.open('GET', 'http://localhost:8080/meetme/api/person', true);
+               xhr.send(null);
+
+               xhr.onreadystatechange = function () {
+                   if (xhr.readyState == XMLHttpRequest.DONE) {
+                       json = xhr.responseText;
+
+                       var userlist = JSON.parse(json);
+                       anzahluser = (Object.keys(userlist).length)
+
+                       var useravailable = true;
+                       for (var i = 0; i < anzahluser; i++) {
+                           if (userlist[i].email === email) {
+                               alert('Their is already an account with this Email: ' + email);
+                               window.location.replace("http://localhost:8080/index.html");
+                               return useravailable = false;
+                           }
+                           else if (userlist[i].username === username) {
+                               alert('Username ' + username + ' is already taken!');
+                               window.location.replace("http://localhost:8080/index.html");
+                               return useravailable = false;
+                           }
+                       }
+                       if (useravailable === true) {
+                           createuser();
+                           createcookie();
+
+                           window.location.replace("http://localhost:8080/compare.html");
+                       }
+                   }
+               }
 
            }
-           else{
-               alert('signin failed');
-           }
-       }
 
-
-function checkdataindb(email,username) {
-    var xhr = new XMLHttpRequest();
-    var json;
-    var anzahluser;
-
-
-    xhr.open('GET', 'http://localhost:8080/meetme/api/person', true);
-    xhr.send(null);
-
-    xhr.onreadystatechange = function () {
-        if (xhr.readyState == XMLHttpRequest.DONE) {
-            json = xhr.responseText;
-
-            var userlist = JSON.parse(json);
-            anzahluser=(Object.keys(userlist).length)
-
-            var useravailable = true;
-            for (var i = 0; i < anzahluser; i++) {
-                if (userlist[i].email === email) {
-                    alert('Their is already an account with this Email: ' + email);
-                    window.location.replace("http://localhost:8080/index.html");
-                    return useravailable = false;
-                }
-                else if (userlist[i].username === username){
-                        alert('Username ' + username+ ' is already taken!');
-                    window.location.replace("http://localhost:8080/index.html");
-                    return useravailable = false;
-                }
-            }
-            if (useravailable === true){
-            createuser()
-            }
-        }
-    }
-    
-}
-
-
-checkdataindb(email,username);
-
+       checkdataindb(email, username);
    }
+
+
 
 </script>
 
