--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -163,6 +163,12 @@
                 var xmlhttp = new XMLHttpRequest();
 
                 xmlhttp.open("POST","http://localhost:8080/meetme/api/shootout/"+nameShootout+"&"+userID);
+                xmlhttp.setRequestHeader("Content-Type", "application/json");
+                //sent the new HttpRequest
+                xmlhttp.send(JSON.stringify({
+                    "shootoutName": nameShootout,
+                    "userid":userID
+                }));
             }
 
 
