--- a/frontend/static/html/shootoutÜbersicht.html
+++ b/frontend/static/html/shootoutÜbersicht.html
@@ -65,9 +65,9 @@
     <div id="ShootoutÜbersicht">
         <table>
         <tr>
-            <th>Shootout-Name</th>
-            <th>Topic</th>
-            <th>Top ranked pictures</th>
+            <th id="spalte">Shootout-Name</th>
+            <th id="spalte">Topic</th>
+            <th id="spalte">Top ranked pictures</th>
         </tr>    
         <tr>
             <td>Sweater Weather</td>
