--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -12,16 +12,16 @@
     <script type=text/javascript src = "navbarFunction.js"></script>
     <script type=text/javascript src = "compare.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset= utf-8" />
-    <script src="jquery-3.3.1.min.js"></script>
-</head>
+    <!--  <script src="jquery-3.3.1.min.js"></script> -->
+  </head>
 
-<body>
+  <body>
 
 
-<header class="navbar navbar-inverse navbar-fixed-top navbar-custom">
-    <nav role="navigation" >
-        <div class="container-fluid" >
-            <!-- Brand and toggle get grouped for better mobile display -->
+  <header class="navbar navbar-inverse navbar-fixed-top navbar-custom">
+      <nav role="navigation" >
+          <div class="container-fluid" >
+              <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
@@ -68,23 +68,28 @@
         <div class="col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
             <div class="sidebar-nav">
                 <ul class="nav">
-                    <header>Shootouts</header>
+                    <h1>Shootouts</h1>
                     <br>
                     <button type="button" id="create_shootout" onclick="openModal()">Create shootout</button>
                     <div class="form-group" id="search_shootout">
                         <input  type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <li class="active"><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                </ul>
-            </div>
-            <!--/.well -->
+                    </div >
+
+                    <table id="shootoutstable">
+
+                    </table>
+                    <!--/  <li class="active"><a href="#">Link</a></li>
+                      <li><a href="#">Link</a></li>
+                      <li><a href="#">Link</a></li>
+                      <li><a href="#">Link</a></li>
+                      <li><a href="#">Link</a></li>
+                      <li><a href="#">Link</a></li>
+                      <li><a href="#">Link</a></li>
+                      <li><a href="#">Link</a></li> -->
+                  </ul>
+
+              </div>
+              <!--/.well -->
         </div>
         <!--/span-->
     <!-- Modal popup Shootout -->
@@ -101,8 +106,7 @@
                         <p></p>
                         <label for="nameShootout">Shootout ID</label>
                         <p>
-                        </p
-                        ><select>
+                        </p><select>
                         <option> private </option>
                         <option> public</option>
                     </select>
@@ -117,6 +121,36 @@
         </div>
 
         <script>
+            //Ausgabe der Liste aller Shootouts in der Sidebar
+
+            window.onload = function () {
+                alert('get shootouts started');
+                var xmlhttpsidebar = new XMLHttpRequest ();
+
+                xmlhttpsidebar.open("GET", 'http://localhost:8080/meetme/api/shootout/', true);
+                xmlhttpsidebar.setRequestHeader("Content-Type", "application/json"); //?
+                xmlhttpsidebar.send(null);
+
+                xmlhttpsidebar.onreadystatechange = function (){
+                    if(xmlhttpsidebar.readyState == XMLHttpRequest.DONE){
+                        var json = xmlhttpsidebar.responseText;
+                        var shootoutData = JSON.parse(json);
+                        alert(shootoutData);
+                        var anzahlShootouts=(Object.keys(shootoutData).length);
+                        var shootouttable = document.getElementById("shootoutstable");
+                        for (var i = 0; i < anzahlShootouts; i++){
+
+                            shootouttable.innerHTML += "<tr>" +
+                               "<li><href ='#' id='td1\" + i +\"'/>" + shootoutData[i].name + "</li>" +
+                                "</tr>";
+                        }
+
+                    }
+
+                }
+            };
+
+
             function cookiewerteHolen () {
                 var Wert = "";
                 if (document.cookie) {
@@ -141,24 +175,24 @@
             // When the user clicks on the button, open the modal
             btn.onclick = function() {
                 modal.style.display = "block";
-            }
+            };
 
             // When the user clicks on <span> (x), close the modal
             span.onclick = function() {
                 modal.style.display = "none";
-            }
+            };
             //var die beim klicken auf Btn "Create Shootout
             var closeCS= document.getElementById("createShootout")[0];
             closeCS.onclick= function(){
                 modal.style.display="none";
-            }
+            };
 
             // When the user clicks anywhere outside of the modal, close it
             window.onclick = function(event) {
                 if (event.target == modal) {
                     modal.style.display = "none";
                 }
-            }
+            };
             var userID=cookiewerteHolen();
 
             function createShootout(){
@@ -177,6 +211,7 @@
                     alert('user unknown');
                 }
             }
+
 
 
         </script>
