--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -74,14 +74,19 @@
                     <div class="form-group" id="search_shootout">
                         <input  type="text" class="form-control" placeholder="Search">
                     </div>
-                    <li class="active"><a href="#">Link</a></li>
+
+                    <table id="shootouts">
+
+                    </table>
+
+                   <!--<li class="active"><a href="#">Link</a></li>
                     <li><a href="#">Link</a></li>
                     <li><a href="#">Link</a></li>
                     <li><a href="#">Link</a></li>
                     <li><a href="#">Link</a></li>
                     <li><a href="#">Link</a></li>
                     <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
+                    <li><a href="#">Link</a></li> -->
                 </ul>
             </div>
             <!--/.well -->
@@ -106,6 +111,11 @@
                         <option> private </option>
                         <option> public</option>
                     </select>
+                        <button class="helpBtn5">Help
+                            <span class="helpText">Please enter the name of your new shootout.  <br>
+                                        If you want to share this shootout with everyone select "public" below.
+                            </span>
+                        </button>
 
                     </form>
                 </div>
@@ -206,6 +216,36 @@
 </div>
 <!--/row-->
 <script>
+
+//Ausgabe der Liste aller Shootouts in der Sidebar
+
+window.onload = function () {
+
+    var xmlhttpsidebar = new XMLHttpRequest ();
+
+    xmlhttpsidebar.open("GET", 'http://localhost:8080/meetme/api/shootout/', true);
+    xmlhttpsidebar.setRequestHeader("Content-Type", "application/json"); //?
+    xmlhttpsidebar.send(null);
+
+        xmlhttpsidebar.onreadystatechange = function ();{
+            if(xmlhttpsidebar.readyState == XMLHttpRequest.DONE){
+                var json = httplog.responseText;
+
+                var shootoutData = JSON.parse(json);
+                var anzahlShootouts=(Object.keys(shootoutData).length)
+
+                for (var i = 0; i < anzahlShootouts; i++){
+                    shootouts.innerHTML += "<tr>" +
+                        "<li id='td1" + i +"'/>" + shootoutData[i].shootoutName + "</li>" +
+                        "</tr>";
+                }
+
+            }
+
+        }
+}
+
+//Bilder
     function newpicbox() {
     var img1_src = "./images/LA.jpg";
     var img2_src = "./images/mountains1.jpg";
